doc/Makefile.am: Generate a man-page for the "png" command
* doc/Makefile.am: Generate a man-page for the "png" command.
(png.1): New target.
(dist_man1_MANS, CLEANFILES): Register "png.1".
* configure.ac: Check for "help2man".
* guix.scm (guile-png): New symbol.
[native-inputs]: Add "help2man".

--- a/configure.ac
+++ b/configure.ac
@@ -104,6 +104,9 @@ AC_CHECK_PROG(MAKEINFO_CHECK, makeinfo, yes)
 AS_IF([test x"$MAKEINFO_CHECK" != x"yes"],
             [ AC_MSG_ERROR([Please install texinfo before configuring])])
 
+dnl Manual pages.
+AM_MISSING_PROG([HELP2MAN], [help2man])
+
 # Generate a Makefile, based on the results.
 AC_OUTPUT
 
