png/graphics/regular-polygon: New module
* modules/png/graphics/regular-polygon.scm: New module.
* modules/png/graphics/Makefile.am (SOURCES): Register it.
* modules/png/graphics.scm: Export the new module.
modules/png/graphics/hexagon.scm: Extend <regular-polygon>.

--- a/modules/png/graphics/Makefile.am
+++ b/modules/png/graphics/Makefile.am
@@ -29,6 +29,7 @@ SOURCES = \
 	polygon.scm	\
 	hexagon.scm	\
 	rectangle.scm	\
+	regular-polygon.scm \
 	filled-rectangle.scm	\
 	ellipse.scm	\
 	circle.scm	\
